kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 3  # Number of Pods
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-container
        image: navid67/hackathon_bcf24:frontend-1.0  # Replace with your frontend Docker image
        ports:
        - containerPort: 80  # The port the container is listening on
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer  # Exposes the service externally with a LoadBalancer
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 4000 # External port
    targetPort: 80  # The container's port
